# NaylisGPT_fixed

./: CHANGES.md  README.md  calcul_params.py  evaluate.py  install.sh  pyproject.toml  rapport_audit_naylisgdn.md  requirements.txt  speed_test.py  train.py
config/: 1B.toml  480M.toml  4B.toml
data/: prepare.py  tokens.py
debugue_test/: test_attention_leakage.py  test_config_consistency.py  test_fsdp_sharding.py  test_numerical_stability.py  test_rope_packing.py
naylisgdn/: __init__.py  attention.py  feedforward.py  gdn_block.py  model.py  moe.py  moh.py  mtp.py  norm.py  optimizers.py  rope.py  scheduler.py  transformer_block.py
naylisgdn/gdn2_ops/: __init__.py  chunk_gdn2.py  chunk_kda.py  fused_recurrent_gdn2.py
